welcome.lessons.welcome.bat.bool1.Max1020.scala.error
max1020:6: error: not found: value ab
  if ((b<=20)&&(ab>=10)){
                ^